# docker-cicd-python

./: .gitignore  .tool-versions  Dockerfile  Dockerfile.python-deployment-temp-3.11-3.12  Dockerfile.test-nx  README.md  VERSION  build.sh  generate-test-nx.sh  local_registry.sh  nx.json  renovate.json  run.sh  test.sh
.github/workflows/: docker-publish.yml
test/: .gitignore  Dockerfile  package-lock.json  package.json
test-app/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
test-app/src/test_app/: __init__.py  models.py  views.py
test-app/tests/unit/: app_test.py  conftest.py
test-nx/: Dockerfile  README.md  nx.json  package-lock.json  package.json
test/proj1/: project.json  pyproject.toml
