[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
pytest-cov = "^6.0.0"
pydantic-core = "^2.30.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=test_app --cov-report=term"
filterwarnings = [
    "ignore:The 'app' shortcut is now deprecated:DeprecationWarning:httpx",
]